// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue-clip can mount VueClip component 1`] = `
<div id="app">
    <div class="SharpUpload SharpUpload--empty">
        <div class="SharpUpload__inner dz-clickable">
            <div class="SharpUpload__content">
                <form class="dropzone"><button type="button" class="dz-message SharpButton SharpButton--secondary SharpUpload__upload-button">
                    
                </button></form>
                <!---->
                <div class="clip-preview-template" style="display: none;">
                    <div></div>
                </div>
            </div>
        </div>
        <!----><a style="display: none;"></a></div>
</div>
<input type="file" multiple="multiple" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially image VueClip component 1`] = `
<div id="app">
    <div class="SharpUpload">
        <div class="SharpUpload__inner dz-clickable">
            <div class="SharpUpload__content">
                <form class="dropzone" style="display: none;"><button type="button" class="dz-message SharpButton SharpButton--secondary SharpUpload__upload-button">
                    
                </button></form>
                <div class="SharpUpload__container">
                    <div class="SharpUpload__thumbnail"><img src="/image.jpg"></div>
                    <div class="SharpUpload__infos">
                        <div class="mb-3"><label class="SharpUpload__filename">Image.jpg</label>
                            <div class="SharpUpload__info mt-2"><span class="mr-2">&lt;0.1 MB</span> <a href="" class="SharpUpload__download-link">
                                    
                                </a></div>
                            <div class="SharpUpload__progress mt-2" style="display: none;">
                                <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 0%;"></div>
                            </div>
                        </div>
                        <div><button type="button" class="SharpButton SharpButton--sm SharpButton--secondary">
                                    
                                </button> <button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
                                
                            </button></div>
                    </div> <button type="button" class="SharpUpload__close-button"><svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon"><path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path></svg></button></div>
                <div class="clip-preview-template" style="display: none;">
                    <div></div>
                </div>
            </div>
        </div>
        <div noautofocus="true" class="SharpModal" id="__BVID__16____BV_modal_outer_">
            <div aria-hidden="true" role="dialog" class="modal fade" style="display: none;" id="__BVID__16_">
                <div class="modal-dialog modal-md">
                    <div tabindex="-1" role="document" class="modal-content" aria-labelledby="__BVID__16____BV_modal_header_" aria-describedby="__BVID__16____BV_modal_body_">
                        <header class="modal-header" id="__BVID__16____BV_modal_header_">
                            <div>
                                <h5 class="SharpModal__heading"></h5> <button type="button" class="SharpModal__close"><svg width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpModal__close-icon"><path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path></svg></button></div>
                        </header>
                        <div class="modal-body" id="__BVID__16____BV_modal_body_">
                            <!---->
                            <div><button class="SharpButton SharpButton--primary"><i class="fa fa-rotate-left"></i></button> <button class="SharpButton SharpButton--primary"><i class="fa fa-rotate-right"></i></button></div>
                        </div>
                        <footer class="modal-footer" id="__BVID__16____BV_modal_footer_"><button type="button" class="btn btn-secondary">Cancel</button><button type="button" class="btn btn-primary">OK</button></footer>
                    </div>
                </div>
            </div>
            <!---->
        </div> <a style="display: none;"></a></div>
</div>
<input type="file" multiple="multiple" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount initially non image VueClip component 1`] = `
<div id="app">
    <div class="SharpUpload">
        <div class="SharpUpload__inner dz-clickable">
            <div class="SharpUpload__content">
                <form class="dropzone" style="display: none;"><button type="button" class="dz-message SharpButton SharpButton--secondary SharpUpload__upload-button">
                    
                </button></form>
                <div class="SharpUpload__container">
                    <!---->
                    <div class="SharpUpload__infos">
                        <div class="mb-3"><label class="SharpUpload__filename">Fichier.pdf</label>
                            <div class="SharpUpload__info mt-2"><span class="mr-2">&lt;0.1 MB</span> <a href="" class="SharpUpload__download-link">
                                    
                                </a></div>
                            <div class="SharpUpload__progress mt-2" style="display: none;">
                                <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="SharpUpload__progress-bar" style="width: 0%;"></div>
                            </div>
                        </div>
                        <div><button type="button" class="SharpButton SharpButton--sm SharpButton--secondary" style="display: none;">
                                    
                                </button> <button type="button" class="SharpButton SharpButton--sm SharpButton--secondary SharpButton--danger SharpUpload__remove-button">
                                
                            </button></div>
                    </div> <button type="button" class="SharpUpload__close-button"><svg aria-label="close" width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpUpload__close-icon"><path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path></svg></button></div>
                <div class="clip-preview-template" style="display: none;">
                    <div></div>
                </div>
            </div>
        </div>
        <!----><a style="display: none;"></a></div>
</div>
<input type="file" multiple="multiple" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;

exports[`vue-clip can mount read-only VueClip component 1`] = `
<div id="app">
    <div class="SharpUpload SharpUpload--empty SharpUpload--disabled">
        <div class="SharpUpload__inner dz-clickable">
            <div class="SharpUpload__content">
                <form class="dropzone"><button type="button" disabled="disabled" class="dz-message SharpButton SharpButton--secondary SharpUpload__upload-button">
                    
                </button></form>
                <!---->
                <div class="clip-preview-template" style="display: none;">
                    <div></div>
                </div>
            </div>
        </div>
        <!----><a style="display: none;"></a></div>
</div>
<input type="file" multiple="multiple" class="dz-hidden-input" style="visibility: hidden; position: absolute; top: 0px; left: 0px; height: 0px; width: 0px;">
`;
